# speckle_arc

./: .env.cloud.example  .env.example  .env.selfhosted.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: sensor_room_map.arc-wcl-21.json  sensor_room_map.example.json  sensor_room_map.json
deploy/systemd/: speckle-arc-mqtt.service
docs/: IoT Architecture Diagram.html  ubuntu-deploy.md
src/speckle_arc/: __init__.py  main.py  mqtt_to_speckle.py  speckle_latest.py
