[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speckle-arc"
version = "0.1.0"
description = "Starter scaffold for the speckle_arc project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "P_Kwan" }
]
dependencies = []

[project.scripts]
speckle-arc = "speckle_arc.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
